--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,4 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-  "recommendations": ["angular.ng-template"],
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "recommendations": ["angular.ng-template"]
 }
