google アナリティクス

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "ngx-google-analytics": "^14.0.1",
     "ngx-scrolltop": "^4.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
