--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
                 "input": "src",
                 "output": "/"
               },
-              "src/sitemap.xml"
+              "src/sitemap.xml",
+              "src/robots.txt"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
